# runewire

./: .editorconfig  .gitignore  README.md  Runewire.sln  demo-recipe.yaml  invalid-recipe.yaml
Runewire.Orchestrator.Tests/: Runewire.Orchestrator.Tests.csproj
Runewire.Orchestrator.Tests/Orchestration/: RecipeExecutorTests.cs
native/: CMakeLists.txt  cpp.hint
native/Runewire.Injector/: CMakeLists.txt
native/Runewire.Injector/include/: runewire_injector.h
native/Runewire.Injector/src/: runewire_injector.cpp
src/Runewire.Cli/: Program.cs  Runewire.Cli.csproj
src/Runewire.Cli/Commands/: RecipeRunCommand.cs  RecipeValidateCommand.cs
src/Runewire.Cli/Infrastructure/: DryRunInjectionEngine.cs
src/Runewire.Core/Domain/Recipes/: InjectionTechnique.cs  RecipeTarget.cs  RecipeTargetKind.cs  RunewireRecipe.cs
src/Runewire.Orchestrator/: Runewire.Orchestrator.csproj
src/Runewire.Orchestrator/NativeInterop/: INativeInjectorInvoker.cs  NativeMethods.cs  NativeTypes.cs
src/Runewire.Orchestrator/Orchestration/: IInjectionEngine.cs  InjectionRequest.cs  InjectionResult.cs  NativeInjectionEngine.cs  RecipeExecutor.cs
src/Runewire.Orchestrator/Properties/: InternalsVisibleTo.cs
tests/Runewire.Cli.Tests/: Runewire.Cli.Tests.csproj
tests/Runewire.Cli.Tests/Commands/: RecipeRunCommandTests.cs  RecipeValidateCommandTests.cs
tests/Runewire.Core.Tests/: Runewire.Core.Tests.csproj
tests/Runewire.Orchestrator.Tests/: Runewire.Orchestrator.Tests.csproj
tests/Runewire.Orchestrator.Tests/Orchestration/: NativeInjectionEngineTests.cs  RecipeExecutorTests.cs
(+19 files in other folders)
